set(CSHARP_INTERFACES
    csharp_showtime.i
)

SET_SOURCE_FILES_PROPERTIES(${CSHARP_INTERFACES} PROPERTIES CPLUSPLUS ON)

FIND_PACKAGE(CSHARP 3.5 REQUIRED)
# INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH} ${BASEPATH})
include (${SWIG_USE_FILE})

SWIG_ADD_LIBRARY(showtime_csharp LANGUAGE csharp SOURCES ${CSHARP_INTERFACES} ${ZST_HEADERS})

SWIG_LINK_LIBRARIES(showtime_csharp 
	${PROJECT_NAME}
	${ZeroMQ_LIBRARIES} 
	${CSHARP_LIBRARIES}
	${CZMQ_LIBRARIES}
	${MSGPACK_LIBRARIES}
)