set(BUILD_STAMP "${CMAKE_CURRENT_BINARY_DIR}/build/timestamp")

set(CSHARP_INTERFACES
    showtime.i
)

set(DOTNET_TARGET ${PROJECT_NAME}Dotnet)

SET_SOURCE_FILES_PROPERTIES(${CSHARP_INTERFACES} PROPERTIES CPLUSPLUS ON)
include (${SWIG_USE_FILE})

set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR})
include_directories(${Showtime_INCLUDE_DIRS})
set(SWIG_MODULE_${DOTNET_TARGET}_EXTRA_DEPS ${Showtime_API_INTERFACE})
message(STATUS ${Showtime_API_INTERFACE})
message(STATUS ${SWIG_MODULE_${DOTNET_TARGET}_EXTRA_DEPS})

SWIG_ADD_LIBRARY(${DOTNET_TARGET} LANGUAGE csharp TYPE SHARED SOURCES ${CSHARP_INTERFACES})
add_dependencies(${SWIG_MODULE_${DOTNET_TARGET}_REAL_NAME} ${CLIENT_TARGET})
SWIG_LINK_LIBRARIES(
	${DOTNET_TARGET}
	${CLIENT_TARGET}
)

option(BINDINGS_UNITY "Build Unity project" OFF)

if(BINDINGS_UNITY)
	set(UNITY_EXECUTABLE $ENV{PROGRAMFILES}/Unity/Editor/Unity.exe CACHE FILEPATH "Path to Unity executable")
	set(UNITY_PROJECT ${CMAKE_CURRENT_BINARY_DIR}/unity/Showtime-Unity)

	# Copy dotnet bindings
	file(GLOB DOTNET_BINDINGS "${CMAKE_CURRENT_BINARY_DIR}/*.cs")
	file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/unity/Showtime-Unity DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

	# Set Unity project paths
	SET(DOTNET_LIB_OUTPUT $<TARGET_FILE:${SWIG_MODULE_${DOTNET_TARGET}_REAL_NAME}>)
	SET(UNITY_BIN_DIR ${UNITY_PROJECT}/Assets/Showtime/Plugins/x64-win)
	SET(UNITY_BINDINGS_DIR ${UNITY_PROJECT}/Assets/Showtime/Plugins/bindings)
	set(UNITY_BINARY_FILES $<TARGET_FILE:${PROJECT_NAME}> $<TARGET_FILE:${SERVER_TARGET}> ${DOTNET_LIB_OUTPUT} ${RUNTIMES_LIBZMQ} ${RUNTIMES_CZMQ})

	add_custom_command(
		OUTPUT ${BUILD_STAMP} 
	   	COMMAND ${CMAKE_COMMAND} -E copy ${DOTNET_BINDINGS} ${UNITY_BINDINGS_DIR}
		COMMAND ${CMAKE_COMMAND} -E copy ${UNITY_BINARY_FILES} ${UNITY_BIN_DIR}
		COMMAND ${UNITY_EXECUTABLE} -batchmode -quit -projectPath ${UNITY_PROJECT} -exportPackage Assets/${PROJECT_NAME} ${PROJECT_NAME}-${SHOWTIME_VERSION}.unitypackage
		DEPENDS ${DOTNET_TARGET} ${CLIENT_TARGET} ${SERVER_TARGET}
	)
	add_custom_target(BUILD_UNITY_PACKAGE ALL DEPENDS ${BUILD_STAMP})
endif()
